<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number2"
        android:layout_width="140dp"
        android:layout_height="61dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/teal_200"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:textSize="13pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="65dp"
        android:layout_height="154dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/plus"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/plus"
            android:textAlignment="center"
            android:textSize="13pt" />

        <RadioButton
            android:id="@+id/minus"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/minus"
            android:textAlignment="center"
            android:textSize="13pt" />

        <RadioButton
            android:id="@+id/mul"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/mult"
            android:textAlignment="center"
            android:textSize="13pt" />

        <RadioButton
            android:id="@+id/div"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/div"
            android:textAlignment="center"
            android:textSize="13pt" />
    </RadioGroup>

    <EditText
        android:id="@+id/number1"
        android:layout_width="140dp"
        android:layout_height="61dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/teal_200"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:textSize="13pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:text="@string/equals"
        android:textAlignment="center"
        android:textSize="13pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/erg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:text="@string/erg"
        android:textAlignment="center"
        android:textSize="13pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchVerlauf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="316dp"
        android:checked="true"
        android:text="@string/verlauf_speichern"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/verlauf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="304dp"
        android:text="@string/verlauf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toEndOf="@+id/switchVerlauf"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>